Multiple modifications. Seems like the end version.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <div class="well">
             <h1>Liste de réceptifs</h1>
         </div>
+        <input type="search" placeholder="Rechercher un réceptif..." id="search" />
+        <div class="clear"></div>
         <img src="img/ajax-loader.gif" width="128" height="15" alt="Loading..." id="loading-dmcs" />
         <div id="container">
         </div>
